--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="status">Status</string>
     <string name="save">Save</string>
     <string name="create">Create</string>
+    <string name="not_saved">Not saved</string>
+    <string name="item_added">Iten added</string>
 </resources>
