Added radiogroup to todoitem form.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="removed_todo_list">Removed todo list</string>
     <string name="new_todo_litem">New Todo Item</string>
     <string name="remove_this_list">Remove this list</string>
+    <string name="status_todo">Todo</string>
+    <string name="status_doing">Doing</string>
+    <string name="status_done">Done</string>
 </resources>
