--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,11 @@
     <string name="try_again">Try again</string>
     <string name="removed_todo_list">Removed todo list</string>
     <string name="remove_list">Remove list</string>
+    <string name="remove_item">Remove item</string>
     <string name="new_list">New list</string>
     <string name="new_item">New item</string>
     <string name="status_todo">Todo</string>
     <string name="status_doing">Doing</string>
     <string name="status_done">Done</string>
+    <string name="textview">TextView</string>
 </resources>
